# advent_of_code_2022

./: Cargo.toml  README.md  bacon.toml
.github/actions/: tests_main.yml
.github/workflows/: rust.yml
data/: day_10.txt
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
tests/: test_1.rs  test_2.rs  test_3.rs  test_4.rs  test_5.rs
