[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.1"
grid = "0.9.0"
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
rayon = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
